Added Config class to store context Changed MainActivity to store context in config class Added Metric Time Notification Provider Moved Updated Time Service outside of the Metric Time Widget Provider Updated the service to create and update the widget and to listen for screen state change events

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,18 +27,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mathi_amorim.emmanuel.metrictime">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <receiver android:name=".MetricTimeWidgetProvider" android:label="@string/widget_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
@@ -46,7 +50,15 @@
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/metric_time_widget_info"/>
         </receiver>
-        <service android:name=".MetricTimeWidgetProvider$UpdateTimeService"/>
-    </application>
 
+        <service android:name=".UpdateTimeService"/>
+
+        <receiver android:name=".MetricTimeNotificationProvider" android:directBootAware="true" android:label="Metric Time Notification" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
+    </application>
 </manifest>
